Forms, jobs and resume layout

--- a/site/content/collections/jobs/2016-10-10.goodworld.md
+++ b/site/content/collections/jobs/2016-10-10.goodworld.md
@@ -1,7 +1,8 @@
-company: Goodworld
 position: Full Stack Developer
 website: https://goodworld.me
-start_date: 2016-05-09
+start_date: 2016-05-01
+description: This is what I did while I was at LifeZette
+company: Goodworld
 duties: Current...
 title: Goodworld
 id: 41e8b373-b9e5-4dc2-bd73-ea1b607e3d6f
