--- a/site/content/collections/projects/2016-10-05.lifezette-mobile-app.md
+++ b/site/content/collections/projects/2016-10-05.lifezette-mobile-app.md
@@ -1,5 +1,5 @@
-project: LifeZette
 website: https://www.lifezette.com/about/app/
-description: edit this
+description: This is what I did for the LifeZette mobile application!
+project: LifeZette
 title: LifeZette Mobile App
 id: b9d3283a-e390-4569-af35-b29eccd16805
