--- a/site/content/collections/projects/2016-04-01.jericho-oil-corporation.md
+++ b/site/content/collections/projects/2016-04-01.jericho-oil-corporation.md
@@ -1,5 +1,7 @@
-project: JCO
 website: http://www.jerichooil.com/
+hero_image:
+  - 015a32ed-3815-4120-a84f-a57dedce48bb
 description: I made them a doopppppeeeee ass website!!
+project: JCO
 title: Jericho Oil Corporation
 id: 37aa4812-22c5-4460-8987-f300f2d6da00
