--- a/site/content/collections/projects/2016-10-05.lifezette-website.md
+++ b/site/content/collections/projects/2016-10-05.lifezette-website.md
@@ -1,5 +1,7 @@
-project: LifeZette
 website: https://www.lifezette.com
+hero_image:
+  - 015a32ed-3815-4120-a84f-a57dedce48bb
 description: Fix this.
+project: LifeZette
 title: LifeZette Website
 id: a32e1800-7bb0-4af9-82c8-696a5f9d1a89
