--- a/site/content/collections/projects/2016-10-05.lifezette-mobile-app.md
+++ b/site/content/collections/projects/2016-10-05.lifezette-mobile-app.md
@@ -1,5 +1,24 @@
 website: https://www.lifezette.com/about/app/
-description: This is what I did for the LifeZette mobile application!
+hero_image:
+  - 015a32ed-3815-4120-a84f-a57dedce48bb
+description: |
+  This is what I did for the LifeZette mobile application! It was a two week adventure!
+  
+  - This is what I did for the LifeZette mobile application!
+  - This is what I did for the LifeZette mobile application!
+  - This is what I did for the LifeZette mobile application!
+  - This is what I did for the LifeZette mobile application!
+  
+  Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nullam quis risus eget urna mollis ornare vel eu leo.
+  
+  Curabitur blandit tempus porttitor. Maecenas faucibus mollis interdum. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nulla vitae elit libero, a pharetra augue.
+images:
+  - 96ad1f9e-a383-438a-aa0f-6b8d62ca7001
+  - e7bebe8f-7bfd-4fd7-a7f6-a0262b11990b
+  - a60d2820-8d0b-42f7-a84c-d0bff0fa5b9b
+  - 3e6f404e-2010-4e0a-9339-4aec2d187339
+  - 60036f56-f66c-4aea-aa3b-2d79574feed0
+  - b7db3a25-ef57-4c17-9ae1-4eca658bf481
 project: LifeZette
 title: LifeZette Mobile App
 id: b9d3283a-e390-4569-af35-b29eccd16805
