--- a/site/content/collections/projects/2016-10-05.lifezette-website.md
+++ b/site/content/collections/projects/2016-10-05.lifezette-website.md
@@ -1,7 +1,17 @@
 website: https://www.lifezette.com
 hero_image:
-  - 015a32ed-3815-4120-a84f-a57dedce48bb
-description: Fix this.
+  - 209e60be-a372-4637-8f07-d284d583661f
+description: |
+  Sed posuere consectetur est at lobortis. Maecenas faucibus mollis interdum. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+  
+  Donec id elit non mi porta gravida at eget metus. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.
+images:
+  - 740b205f-6185-4353-856a-15df43a9f4f2
+  - 06affdf3-36f3-4b07-b74d-30696366deea
+  - c8d706e8-c095-465d-a7f8-26c267415f84
+  - 3b692868-1333-466f-92d6-ab12aea1c3d4
+  - d27edb77-630e-4a60-935d-f6a50949b8c1
+  - 0ca982fd-b59d-414f-8dc7-8100e36a28ab
 project: LifeZette
 title: LifeZette Website
 id: a32e1800-7bb0-4af9-82c8-696a5f9d1a89
