--- a/site/content/collections/projects/2016-04-01.jericho-oil-corporation.md
+++ b/site/content/collections/projects/2016-04-01.jericho-oil-corporation.md
@@ -1,7 +1,19 @@
 website: http://www.jerichooil.com/
 hero_image:
-  - 015a32ed-3815-4120-a84f-a57dedce48bb
-description: I made them a doopppppeeeee ass website!!
+  - 27378a05-628c-428c-84ed-888602b0a173
+description: |
+  Maecenas sed diam eget risus varius blandit sit amet non magna. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Sed posuere consectetur est at lobortis. Donec id elit non mi porta gravida at eget metus.
+  
+  Sed posuere consectetur est at lobortis. Vestibulum id ligula porta felis euismod semper. Sed posuere consectetur est at lobortis. Curabitur blandit tempus porttitor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
+  
+  Maecenas sed diam eget risus varius blandit sit amet non magna. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+images:
+  - 1e4bf90b-a107-4499-bc0c-055f157258b2
+  - 060abfb4-d3e6-49ca-b0a1-591324329e4e
+  - 34989ace-c063-4e43-ac3f-2de6f7171b90
+  - 442159fb-938e-4047-8402-86aaac5c3132
+  - 62b41a85-a55c-4ce5-8e61-df673a1f535a
+  - 8294a04a-f7e3-49c4-997d-4b76c4f91b14
 project: JCO
 title: Jericho Oil Corporation
 id: 37aa4812-22c5-4460-8987-f300f2d6da00
