--- a/site/content/collections/projects/2015-10-22.gw-school-of-law.md
+++ b/site/content/collections/projects/2015-10-22.gw-school-of-law.md
@@ -1,7 +1,13 @@
 website: http://gwipbrief.org/
-description: |
-  Cras mattis consectetur purus sit amet fermentum. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue. Aenean lacinia bibendum nulla sed consectetur.
-  
-  Donec ullamcorper nulla non metus auctor fringilla. Donec id elit non mi porta gravida at eget metus. Sed posuere consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Aenean lacinia bibendum nulla sed consectetur.
+hero_image:
+  - b094c050-ccfe-40a5-9fc9-e65e6a800392
+description: >
+  The George Washington University Intellectual Property and Entertainment Law Brief is a student run
+  organization that was founded in November 2014. This site is a custom WordPress theme written in
+  PHP, CSS3 and contains HTML5 components with a fully responsive design.
+images:
+  - 8751464f-b1f0-4191-95fd-b35eccc62874
+  - 9d62a54c-9609-4857-a2a2-4ffc28ba001b
+  - 48a2e0ad-c7b6-4a5d-9a47-140dae635bab
 title: 'GW School of Law - Intellectual Property and Entertainment Law Brief'
 id: 20bf493f-3709-4b96-9dc2-2f688d144cfb
