--- a/site/content/collections/projects/2016-04-01.jericho-oil-corporation.md
+++ b/site/content/collections/projects/2016-04-01.jericho-oil-corporation.md
@@ -1,12 +1,7 @@
 website: http://www.jerichooil.com/
 hero_image:
   - 27378a05-628c-428c-84ed-888602b0a173
-description: |
-  Maecenas sed diam eget risus varius blandit sit amet non magna. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Sed posuere consectetur est at lobortis. Donec id elit non mi porta gravida at eget metus.
-  
-  Sed posuere consectetur est at lobortis. Vestibulum id ligula porta felis euismod semper. Sed posuere consectetur est at lobortis. Curabitur blandit tempus porttitor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
-  
-  Maecenas sed diam eget risus varius blandit sit amet non magna. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+description: "Jericho Oil Corporation's website is a WordPress installation with a custom theme and several different and unique post types to distribute their press releases to the proper channels.  A few JavaScript API's are leveraged to pull up to the minute stock information into the website."
 images:
   - 1e4bf90b-a107-4499-bc0c-055f157258b2
   - 060abfb4-d3e6-49ca-b0a1-591324329e4e
