--- a/site/content/collections/projects/2016-10-05.lifezette-mobile-app.md
+++ b/site/content/collections/projects/2016-10-05.lifezette-mobile-app.md
@@ -2,16 +2,9 @@ website: https://www.lifezette.com/about/app/
 hero_image:
   - 65b3b2ca-566f-4b5a-b9cf-c9d71c2b1b07
 description: |
-  This is what I did for the LifeZette mobile application! It was a two week adventure!
+  The LifeZette Mobile App is a simple consumer of the WordPress API published from the company's main website. This project came together under a very short deadline, from commission to publication in the Apple App Store and Google Play store was two weeks.
   
-  - This is what I did for the LifeZette mobile application!
-  - This is what I did for the LifeZette mobile application!
-  - This is what I did for the LifeZette mobile application!
-  - This is what I did for the LifeZette mobile application!
-  
-  Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nullam quis risus eget urna mollis ornare vel eu leo.
-  
-  Curabitur blandit tempus porttitor. Maecenas faucibus mollis interdum. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nulla vitae elit libero, a pharetra augue.
+  The app is built on the [Ionic Framework](http://ionicframework.com/) to reach both iOS and Android devices. The WordPress API was extended with additional custom endpoints and data structures to publish images, videos, and advertising content to the application.
 images:
   - 96ad1f9e-a383-438a-aa0f-6b8d62ca7001
   - e7bebe8f-7bfd-4fd7-a7f6-a0262b11990b
