--- a/site/content/collections/projects/2016-10-15.salt-house-road.md
+++ b/site/content/collections/projects/2016-10-15.salt-house-road.md
@@ -1,10 +1,10 @@
 website: https://www.salthouseroad.com
 hero_image:
   - 0034b448-0fc1-4a86-80bf-ed491b3febef
-description: |
-  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula ut id elit.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-  
-  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula ut id elit.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+description: >
+  Salt House Road is a literature, home design and fashion blog built on WordPress. I created the
+  initial design, color scheme and logo. The website is very socially integrated with many different
+  publishing avenues, news letters and daily updates published to subscribers.
 images:
   - 18d26e2f-4d4f-4bf6-9c51-8ce14a6448af
   - 2ea61628-4ab3-453f-93e2-45386b74197c
