--- a/site/content/collections/projects/2016-10-05.lifezette-website.md
+++ b/site/content/collections/projects/2016-10-05.lifezette-website.md
@@ -2,9 +2,16 @@ website: https://www.lifezette.com
 hero_image:
   - 209e60be-a372-4637-8f07-d284d583661f
 description: |
-  Sed posuere consectetur est at lobortis. Maecenas faucibus mollis interdum. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+  Created a custom WordPress theme for www.lifezette.com that is supported by 9 additional custom plugins to extend the functionality of the CMS. Listed below:
   
-  Donec id elit non mi porta gravida at eget metus. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.
+  - The registering and management of JSON API endpoints for website content
+  - Shortcode Rendering Engine for server side performance delivered to the mobile app
+  - A Library of shortcodes to support the Editorial Staff’s enriched content needs
+  - Fully SCSS’ed stylesheets with modularity across the mobile app as well
+  - A plugin containing a library of methods for onboarding and managing new advertising partners on our platform
+  - Engineered LifeZette’s video platform, synchronizing our WordPress database with a third party API for web and app playback
+  - Designed, planned and coded LifeZette's mobile app built on the hybrid Ionic platform to support iOS and Android, including all graphics and icons
+  - Full management of the build system, SVG and asset production and deployment process
 images:
   - 740b205f-6185-4353-856a-15df43a9f4f2
   - 06affdf3-36f3-4b07-b74d-30696366deea
