Updates on server

--- a/site/content/collections/projects/2015-10-22.gw-school-of-law.md
+++ b/site/content/collections/projects/2015-10-22.gw-school-of-law.md
@@ -9,5 +9,5 @@ images:
   - 8751464f-b1f0-4191-95fd-b35eccc62874
   - 9d62a54c-9609-4857-a2a2-4ffc28ba001b
   - 48a2e0ad-c7b6-4a5d-9a47-140dae635bab
-title: 'GW School of Law - Intellectual Property and Entertainment Law Brief'
+title: 'GW School of Law - IPEL'
 id: 20bf493f-3709-4b96-9dc2-2f688d144cfb
