--- a/site/content/collections/jobs/2016-10-10.goodworld.md
+++ b/site/content/collections/jobs/2016-10-10.goodworld.md
@@ -2,13 +2,12 @@ position: Full Stack Developer
 website: https://goodworld.me
 start_date: 2016-05-01
 description: |
-  GoodWorld is a Washington, D.C. based financial tech startup changing the way people give to charity via social media as well as a provider of conventional fundraising tools (donation buttons, forms and widgets).
+  Goodworld is a Washington, D.C. based financial tech startup changing the way people give to charity via social media, with hashtag donations, as well as a provider of conventional fundraising tools (donation buttons, forms and embeddable widgets).
   
-  - Working with PHP, Laravel, TWIG, MySQL, Amazon Web Services (RDS, ELB, SES, SQS, EC2, Route 53), Stripe(payments), HTML5, CSS3, and jQuery
-  - Responsible for the frontend build of the website and CSS framework that spans all services and products
-  - Implemented an immutable general ledger framework for a referral credit grant system that allows donors and referral recipients who signup to receive credit / money to give to a charity of their choice.
-  - Developed an AJAX based donation widget that can be embedded on any Website or BLOG to allow nonprofits to accept donations without navigating away from their Website
-  - Built out GoodWorld's application dashboard to allow system administrators and nonprofits to easily filter historical donation / fundraising data
+  - Working with PHP, Laravel, TWIG, MySQL, Amazon Web Services (RDS, ELB, SES, SQS, EC2, Route 53), Stripe, HTML5, CSS3, SASS, and jQuery and React.
+  - Responsible for the frontend build of the website and CSS framework that spans all services and products and custom emails
+  - Implemented an immutable general ledger framework for a referral credit grant system that allows donors and referral recipients who signup to receive credit to give to a charity of their choice.
+  - Assisted in development of a React based donation widget that can be embedded on any website to allow nonprofits to accept donations without navigating away from their own site
 company: Goodworld
 duties: Current...
 title: Goodworld
