--- a/site/content/collections/jobs/2016-10-10.goodworld.md
+++ b/site/content/collections/jobs/2016-10-10.goodworld.md
@@ -1,6 +1,7 @@
 position: Full Stack Developer
 website: https://goodworld.me
 start_date: 2016-05-01
+end_date: 2017-06-30
 description: |
   Goodworld is a Washington, D.C. based financial tech startup changing the way people give to charity via social media, with hashtag donations, as well as a provider of conventional fundraising tools (donation buttons, forms and embeddable widgets).
   
