--- a/site/content/collections/projects/2016-12-16.goodworld-redesign.md
+++ b/site/content/collections/projects/2016-12-16.goodworld-redesign.md
@@ -1,7 +1,10 @@
 website: https://goodworld.me
 hero_image:
   - /assets/projects/goodworld/goodworld-banner.jpg
-description: 'Goodworld partnered with [SouthSouthWest](http://southsouthwest.com.au/) to recreate the Goodworld brand from the ground up. I had a role in the overall direction of the redesign and was the solo front end developer on the project, while chipping in on the back-end as well. We created new build systems, SCSS framework and component system to achieve the design vision that SSW had brilliantly crafted. In addition to the website, to company’s embeddable widget got a new coat of paint as well. I was rewritten in React and Redux and expands on the front-end framework from the website.'
+description: |
+  Goodworld partnered with [SouthSouthWest](https://southsouthwest.com.au/) to recreate the Goodworld brand from the ground up. I had a role in the overall direction of the redesign and was the solo front end developer on the project while chipping in on the back-end as well. We created new build systems, SCSS framework and component system to achieve the design vision that SSW had brilliantly crafted.
+  
+  In addition to the website, to company’s embeddable widget got a new coat of paint as well. This widget was rewritten in [React](https://reactjs.org/) and [Redux](https://redux.js.org/) and expands on the front-end framework from the website.
 images:
   - /assets/projects/goodworld/Goodworld-1.jpg
   - /assets/projects/goodworld/Goodworld-2.jpg
